--- a/frontend/fasilitator.html
+++ b/frontend/fasilitator.html
@@ -190,7 +190,7 @@
               ></a>
               <ul>
                 <li>
-                  <a href="fasilitator.html" class="active">Profesional Fasilitor dan Instuktur Tersertifikasi</a>
+                  <a href="fasilitator.html" class="active">Fasilitor dan Instuktur Pelatihan</a>
                 </li>
                 <!-- <li>
                   <a href="instruktur.html">Instuktur Tersertifikasi</a>
@@ -230,7 +230,7 @@
       </div>
 
       <div class="title-wrapper">
-        <h1>PROFESIONAL FASILITATOR & INSTRUKTUR TERSERTIFIKASI</h1>
+        <h1>FASILITATOR & INSTRUKTUR PELATIHAN</h1>
       </div>
     </div><!-- End Page Title -->
 
