--- a/frontend/penyelenggara.html
+++ b/frontend/penyelenggara.html
@@ -230,7 +230,7 @@
       </div>
 
       <div class="title-wrapper">
-        <h1>TIM PENYELENGGARA PELATIHAN TERSERTIFIKASI</h1>
+        <h1>PENGENDALI PELATIHAN</h1>
       </div>
     </div><!-- End Page Title -->
 
