--- a/frontend/admin/editpelatihan.html
+++ b/frontend/admin/editpelatihan.html
@@ -154,13 +154,13 @@
           </div>
 
           <div class="mb-3">
-            <label class="form-label fw-bold">Deskripsi</label>
-            <textarea
-              id="edit_deskripsi"
-              name="deskripsi"
+            <label class="form-label fw-bold">Jumlah JPL</label>
+            <input
+              id="edit_jumlah_jpl"
+              name="jumlah_jpl"
               class="form-control"
-              rows="3"
-            ></textarea>
+              required
+            ></input>
           </div>
 
           <div class="mb-3">
@@ -261,12 +261,20 @@
           <div class="mb-3">
             <label class="form-label fw-bold">Kategori Peserta</label>
             <select id="edit_kategori" name="kategori" class="form-control">
-              <option value="Umum">Umum</option>
-              <option value="Nakes Internal">Nakes Internal</option>
-              <option value="Nakes Eksternal">Nakes Eksternal</option>
-              <option value="Non-Nakes Internal">Non-Nakes Internal</option>
-              <option value="Non-Nakes Eksternal">Non-Nakes Eksternal</option>
+              <option value="Nakes">Nakes</option>
+              <option value="Non Nakes">Non-Nakes</option>
             </select>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label fw-bold">Kriteria Peserta</label>
+            <input
+              type="text"
+              id="edit_keterangan"
+              name="kriteria_peserta"
+              class="form-control"
+              placeholder="Contoh: Khusus nakes untuk Bidan, Dokter, dan Perawat"
+            />
           </div>
 
           <div class="mb-3">
@@ -375,8 +383,8 @@
             data.id_pelatihan;
           document.getElementById("edit_nama_pelatihan").value =
             data.nama_pelatihan;
-          document.getElementById("edit_deskripsi").value =
-            data.deskripsi || "";
+          document.getElementById("edit_jumlah_jpl").value =
+            data.jumlah_jpl || "";
           document.getElementById("edit_narasumber").value =
             data.narasumber || "";
           document.getElementById("edit_lokasi").value = data.lokasi || "";
@@ -393,6 +401,7 @@
           document.getElementById("edit_kuota").value = data.kuota ?? "";
           document.getElementById("edit_harga").value = Number(data.harga) ?? 0;
           document.getElementById("edit_kategori").value = data.kategori;
+          document.getElementById("edit_keterangan").value = data.kriteria_peserta;
           document.getElementById("edit_tipe_pelatihan").value =
             data.tipe_pelatihan || "";
           document.getElementById("edit_durasi").value = data.durasi || "";
