--- a/frontend/struktur_organisasi.html
+++ b/frontend/struktur_organisasi.html
@@ -227,18 +227,10 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="breadcrumbs">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><i class="bi bi-house"></i> Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Category</a></li>
-            <li class="breadcrumb-item active current">Terms</li>
-          </ol>
-        </nav>
       </div>
 
       <div class="title-wrapper">
-        <h1>Terms</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        <h1>STRUKTUR ORGANISASI</h1>
       </div>
     </div><!-- End Page Title -->
 
