--- a/frontend/index.html
+++ b/frontend/index.html
@@ -234,7 +234,16 @@
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            <!-- <li><a href="doctors.html">Kritik dan Saran</a></li> -->
+            
+            <li class="ms-lg-3">
+              <a
+                href="daftarpelatihan.html"
+                class="btn btn-accent nav-cta"
+              >
+                Daftar Pelatihan
+              </a>
+            </li>
+
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -390,10 +399,10 @@
           </h2>
 
           <!-- ===== EXPORT EXCEL KALENDER ===== -->
-            <div class="d-flex justify-content-end mb-2">
+            <div class="container text-center">
               <a
                 href="/uploads/jadwal_pelatihan/Draft_Kalender_Pelatihan_RSMS_2026.xlsx"
-                class="btn btn-primary"
+                class="btn btn-accent"
                 style="padding:10px 18px; border-radius:8px;"
                 target="_blank"
                 download
@@ -943,7 +952,7 @@
       <section id="call-to-action" class="call-to-action section">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="container section-title" data-aos="fade-up">
-            <h2 style="font-weight: bold">SPO DIKLAT</h3>
+            <h2 style="font-weight: bold">ALUR PENDAFTARAN</h3>
               <div class="row features-row" data-aos="fade-up" data-aos-delay="400">
                 <div class="col-12 d-flex justify-content-center">
                   <div class="feature-card text-center w-100" style="max-width: 800px";>
