--- a/frontend/kalender.html
+++ b/frontend/kalender.html
@@ -217,7 +217,16 @@
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            <!-- <li><a href="doctors.html">Kritik dan Saran</a></li> -->
+
+            <li class="ms-lg-3">
+              <a
+                href="daftarpelatihan.html"
+                class="btn btn-accent nav-cta"
+              >
+                Daftar Pelatihan
+              </a>
+            </li>
+
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -229,10 +238,28 @@
 
     <!-- Page Title -->
     <div class="page-title">
-      <div class="title-wrapper">
-        <h1>📅 KALENDER JADWAL PELATIHAN</h1>
+      <div class="container text-center">
+
+        <!-- Judul -->
+        <div class="title-wrapper mb-5">
+          <h1 class="m-0">📅 KALENDER JADWAL PELATIHAN</h1>
+        </div>
+
+        <!-- Tombol Download -->
+        <div>
+          <a
+            href="/uploads/jadwal_pelatihan/Draft_Kalender_Pelatihan_RSMS_2026.xlsx"
+            class="btn btn-accent"
+            style="padding:10px 22px; border-radius:8px;"
+            target="_blank"
+            download
+          >
+            Download Jadwal Pelatihan
+          </a>
+        </div>
+
       </div>
-    </div><!-- End Page Title -->
+    </div>
 
     <!-- Error 404 Section -->
     <section id="error-404" class="error-404 section">
