--- a/frontend/profil.html
+++ b/frontend/profil.html
@@ -214,7 +214,16 @@
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            <!-- <li><a href="doctors.html">Kritik dan Saran</a></li> -->
+
+            <li class="ms-lg-3">
+              <a
+                href="daftarpelatihan.html"
+                class="btn btn-accent nav-cta"
+              >
+                Daftar Pelatihan
+              </a>
+            </li>
+
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
